:nut_and_bolt: :up: use inline-block to fix code width when overflow

--- a/src/elements/_typography.scss
+++ b/src/elements/_typography.scss
@@ -106,7 +106,7 @@ pre {
   > code {
     @include fontsize(inherit);
     position: relative;
-    display: block;
+    display: inline-block;
     padding: $pre-code-padding;
     border-left: $border-width-wide solid $primary;
     @include border-radius-left(0);
